maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but 'for' found.
	for(c <- 0 to getMondeHauteur() - 1){
        ^JediEscaper:18: error: ')' expected but '}' found.
	}
        ^